# solar_panel_curve_tracer

./: .gitignore  AGENTS.md  CMakeLists.txt  LESSONS.md  LICENSE  README.md  partitions.csv  sdkconfig.defaults  secure_boot_flash.sh  secure_boot_signing_key.pem
.github/workflows/: build.yml  ci.yml
board/rev1/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
main/: CMakeLists.txt  idf_component.yml  main.c  measurement.c  measurement.h  ui.c  ui.h
main/app/: app_hw.c  app_hw.h  app_state.c  app_state.h  app_tasks.c  app_tasks.h
main/db/: db.c  db.h
main/drivers/: driver_encoder.c  driver_encoder.h  driver_ina219.c  driver_ina219.h  driver_sh1106.c  driver_sh1106.h  driver_ssd1306.c  driver_ssd1306.h  pwm_controller.c  pwm_controller.h
main/server/: server.c  server.h
main/utils/: init.c  init.h  json_builder.c  json_builder.h  led_controller.c  led_controller.h
notebook/: README.md  requirements.txt  solar_panel_ivcurve.ipynb
spiffs/: chart.umd.min.js  index.html  ota.html  script.js
